--- a/js/i18n/ar-SA.json
+++ b/js/i18n/ar-SA.json
@@ -1,7 +1,7 @@
 {
     "noscriptWarn": {
         "html": "<h3>🚨 عذرًا! لقد وصل عاشق الأمن السيبراني! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>هذا الموقع 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>، لكنني قمت بتكييف كل المحتوى لتتمكن من رؤيته</p>"
-    },    
+    },
     "darkBtn": {
         "aria-label": "تبديل الوضع الداكن"
     },
@@ -40,6 +40,27 @@
     },
     "location": {
         "aria-label": "الموقع"
+    },
+    "workExp": {
+        "text": "الخبرة العملية"
+    },
+    "backDev": {
+        "html": "مطور ويب <span lang='en-GB'>Backend</span>"
+    },
+    "backContent": {
+        "html": "كنت جزءًا من الفريق الذي طور جزءًا من <span lang='en-GB'>Dashboard</span> الأكاديمية لإدارة الدورات والامتحانات والملفات، بالإضافة إلى إنشاء وتصدير <span lang='en-GB'>Newsletters</span> قابلة للتخصيص."
+    },
+    "RRPP": {
+        "text": "منسق العلاقات العامة"
+    },
+    "teamCoord": {
+        "html": "بصفتي مسؤول العلاقات العامة، قمت بإدارة <span lang='en-GB'>Marketing</span> للفعاليات التي تنظمها الشركة، بالإضافة إلى بيع <span lang='en-GB'>Merchandising</span>، عبر شبكات التواصل الاجتماعي جنبًا إلى جنب مع الفريق الذي كنت أنسقه. معًا، أنشأنا علامة تجارية للحياة الليلية كانت عصرية لسنوات."
+    },
+    "volunteer": {
+        "text": "فرز وتغليف. متطوع"
+    },
+    "sorting": {
+        "text": "على الرغم من أنها كانت وظيفة دون تخصص أو مسؤوليات كبيرة، إلا أنني أعترف بأنني استمتعت بمساعدة الآخرين. لطالما كان شعوري بالعدالة يدفعني، ولا أتردد أبدًا في مساعدة من يحتاج إليها حقًا."
     },
     "studies": {
         "text": "الدراسات"
@@ -97,24 +118,6 @@
     },
     "seeCertificate": {
         "aria-label": "عرض الشهادة"
-    },
-    "workExp": {
-        "text": "الخبرة العملية"
-    },
-    "backDev": {
-        "html": "مطور ويب <span lang='en-GB'>Backend</span>"
-    },
-    "RRPP": {
-        "text": "العلاقات العامة"
-    },
-    "teamCoord": {
-        "text": "منسق فريق"
-    },
-    "volunteer": {
-        "text": "متطوع"
-    },
-    "sorting": {
-        "text": "الفرز والتعبئة"
     },
     "otherData": {
         "text": "بيانات أخرى"
