--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -1,7 +1,7 @@
 {
     "noscriptWarn": {
         "html": "<h3>🚨 Упс! Появился любитель кибербезопасности! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>Этот сайт на 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>, но я адаптировал весь контент, чтобы вы могли его увидеть</p>"
-    },    
+    },
     "darkBtn": {
         "aria-label": "Переключить тёмный режим"
     },
@@ -41,6 +41,27 @@
     "location": {
         "aria-label": "Местоположение"
     },
+    "workExp": {
+        "text": "Опыт работы"
+    },
+    "backDev": {
+        "html": "Веб-разработчик <span lang='en-GB'>Backend</span>"
+    },
+    "backContent": {
+        "html": "Я был частью команды, разработавшей часть <span lang='en-GB'>Dashboard</span> академии для управления курсами, экзаменами и личными делами, а также генерацию и экспорт настраиваемых <span lang='en-GB'>Newsletters</span>."
+    },
+    "RRPP": {
+        "text": "Координатор по связям с общественностью"
+    },
+    "teamCoord": {
+        "html": "В качестве руководителя отдела по связям с общественностью я занимался <span lang='en-GB'>Marketing</span> мероприятий, организованных компанией, а также продажей <span lang='en-GB'>Merchandising</span> через социальные сети вместе с командой, которую координировал. Вместе мы создали бренд ночной жизни, который был в моде годами."
+    },
+    "volunteer": {
+        "text": "Сортировка и упаковка. Волонтер."
+    },
+    "sorting": {
+        "text": "Хотя это была работа без специализации или большой ответственности, признаюсь, мне нравилось помогать другим. Чувство справедливости всегда мотивировало меня, и я никогда не колеблюсь, помогая тем, кто в этом действительно нуждается."
+    },
     "studies": {
         "text": "Образование"
     },
@@ -73,7 +94,7 @@
     },
     "publi": {
         "text": "Публикация в интернете"
-    },    
+    },
     "addTraining": {
         "text": "Дополнительное обучение"
     },
@@ -97,23 +118,6 @@
     },
     "seeCertificate": {
         "aria-label": "Смотреть сертификат"
-    },
-    "workExp": {
-        "text": "Опыт работы"
-    },"backDev": {
-        "html": "Веб-разработчик <span lang='en-GB'>Backend</span>"
-    },    
-    "RRPP": {
-        "text": "Связи с общественностью"
-    },
-    "teamCoord": {
-        "text": "Координатор команды"
-    },
-    "volunteer": {
-        "text": "Волонтёр"
-    },
-    "sorting": {
-        "text": "Сортировка и упаковка"
     },
     "otherData": {
         "text": "Прочие данные"
