--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -72,7 +72,7 @@
         "text": "Ciberseguretat"
     },
     "cyberUsers": {
-        "text": "Ciberseguritat per a usuaris"
+        "text": "Ciberseguretat per a usuaris"
     },
     "appDev": {
         "text": "Desenvolupament d'aplicacions amb tecnologies web"
