--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -65,6 +65,12 @@
     "studies": {
         "text": "Estudis"
     },
+    "blockchain": {
+        "text": "Desenvolupament de blockchain"
+    },
+    "otherLangs": {
+        "text": "Altres llenguatges"
+    },
     "cybersec": {
         "text": "Ciberseguretat"
     },
