--- a/js/i18n/en-GB.json
+++ b/js/i18n/en-GB.json
@@ -65,6 +65,12 @@
     "studies": {
         "text": "Studies"
     },
+    "blockchain": {
+        "text": "Blockchain development"
+    },
+    "otherLangs": {
+        "text": "Other languages"
+    },
     "cybersec": {
         "text": "Cybersecurity"
     },
