--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -65,6 +65,12 @@
     "studies": {
         "text": "Estudios"
     },
+    "blockchain": {
+        "text": "Desarrollo de blockchain"
+    },
+    "otherLangs": {
+        "text": "Otros lenguajes"
+    },
     "cybersec": {
         "text": "Ciberseguridad"
     },
