--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -65,6 +65,12 @@
     "studies": {
         "text": "Образование"
     },
+    "blockchain": {
+        "text": "Разработка блокчейна"
+    },
+    "otherLangs": {
+        "text": "Другие языки"
+    },
     "cybersec": {
         "text": "Кибербезопасность"
     },
