--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -66,7 +66,7 @@
         "text": "Estudis"
     },
     "blockchain": {
-        "text": "Desenvolupament de blockchain"
+        "html": "Màster en Desenvolupament Blockchain <span>(en curs)</span>"
     },
     "otherLangs": {
         "text": "Altres llenguatges"
