--- a/js/i18n/zh-CN.json
+++ b/js/i18n/zh-CN.json
@@ -66,7 +66,7 @@
         "text": "学习经历"
     },
     "blockchain": {
-        "text": "区块链开发"
+        "html": "区块链开发硕士 <span>(在读)</span>"
     },
     "otherLangs": {
         "text": "其他语言"
