--- a/js/i18n/ar-SA.json
+++ b/js/i18n/ar-SA.json
@@ -66,7 +66,7 @@
         "text": "الدراسات"
     },
     "blockchain": {
-        "text": "تطوير البلوكشين"
+        "html": "ماجستير في تطوير البلوكشين <span>(قيد التنفيذ)</span>"
     },
     "otherLangs": {
         "text": "لغات أخرى"
