--- a/js/i18n/en-GB.json
+++ b/js/i18n/en-GB.json
@@ -66,7 +66,7 @@
         "text": "Studies"
     },
     "blockchain": {
-        "text": "Blockchain development"
+        "html": "Master’s in Blockchain Development <span>(in progress)</span>"
     },
     "otherLangs": {
         "text": "Other languages"
