--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -66,7 +66,7 @@
         "text": "Estudios"
     },
     "blockchain": {
-        "text": "Desarrollo de blockchain"
+        "html": "Máster en Desarrollo Blockchain <span>(en curso)</span>"
     },
     "otherLangs": {
         "text": "Otros lenguajes"
