--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -66,7 +66,7 @@
         "text": "Образование"
     },
     "blockchain": {
-        "text": "Разработка блокчейна"
+        "html": "Магистратура по разработке блокчейнов <span>(в процессе)</span>"
     },
     "otherLangs": {
         "text": "Другие языки"
