--- a/js/i18n/ar-SA.json
+++ b/js/i18n/ar-SA.json
@@ -48,7 +48,7 @@
         "html": "مطور ويب <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "كنت جزءًا من الفريق الذي طور جزءًا من <span lang='en-GB'>Dashboard</span> الأكاديمية لإدارة الدورات والامتحانات والملفات، بالإضافة إلى إنشاء وتصدير <span lang='en-GB'>Newsletters</span> قابلة للتخصيص."
+        "html": "كنت جزءًا من الفريق الذي طور <span lang='en-GB'>Dashboard</span> الأكاديمية لإدارة الدورات والامتحانات والملفات، بالإضافة إلى إنشاء وتصدير <span lang='en-GB'>Newsletters</span> قابلة للتخصيص."
     },
     "RRPP": {
         "text": "منسق العلاقات العامة"
