--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -48,7 +48,7 @@
         "html": "Desenvolupador web <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "Vaig formar part de l'equip que va desenvolupar part del <span lang='en-GB'>Dashboard</span> de l'acadèmia per a la gestió de cursos, exàmens i expedients, així com la generació i exportació de <span lang='en-GB'>Newsletters</span> personalizables."
+        "html": "Vaig formar part de l'equip que va desenvolupar el <span lang='en-GB'>Dashboard</span> de l'acadèmia per a la gestió de cursos, exàmens i expedients, així com la generació i exportació de <span lang='en-GB'>Newsletters</span> personalizables."
     },
     "RRPP": {
         "text": "Coordinador de Relacions Públiques"
