--- a/js/i18n/en-GB.json
+++ b/js/i18n/en-GB.json
@@ -48,7 +48,7 @@
         "html": "<span lang='en-GB'>Backend</span> web developer"
     },
     "backContent": {
-        "html": "I was part of the team that developed part of the academy's <span lang='en-GB'>Dashboard</span> for managing courses, exams, and records, as well as the generation and export of customizable <span lang='en-GB'>Newsletters</span>."
+        "html": "I was part of the team that developed the academy's <span lang='en-GB'>Dashboard</span> for managing courses, exams, and records, as well as the generation and export of customizable <span lang='en-GB'>Newsletters</span>."
     },
     "RRPP": {
         "text": "Public Relations Coordinator"
