--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -48,7 +48,7 @@
         "html": "Desarrollador web <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "Formé parte del equipo que desarrolló parte del <span lang='en-GB'>Dashboard</span> de la academia para la gestión de cursos, exámenes y expedientes, así como la generación y exportación de <span lang='en-GB'>Newsletters</span> personalizables."
+        "html": "Formé parte del equipo que desarrolló el <span lang='en-GB'>Dashboard</span> de la academia para la gestión de cursos, exámenes y expedientes, así como la generación y exportación de <span lang='en-GB'>Newsletters</span> personalizables."
     },
     "RRPP": {
         "text": "Coordinador de Relaciones Públicas"
