--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -48,7 +48,7 @@
         "html": "Веб-разработчик <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "Я был частью команды, разработавшей часть <span lang='en-GB'>Dashboard</span> академии для управления курсами, экзаменами и личными делами, а также генерацию и экспорт настраиваемых <span lang='en-GB'>Newsletters</span>."
+        "html": "Я был частью команды, разработавшей <span lang='en-GB'>Dashboard</span> академии для управления курсами, экзаменами и личными делами, а также генерацию и экспорт настраиваемых <span lang='en-GB'>Newsletters</span>."
     },
     "RRPP": {
         "text": "Координатор по связям с общественностью"
