--- a/js/i18n/zh-CN.json
+++ b/js/i18n/zh-CN.json
@@ -48,7 +48,7 @@
         "html": "Web 后端开发者 <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "我是开发学院 <span lang='en-GB'>Dashboard</span> 部分功能的团队成员，负责课程管理、考试、档案管理以及可定制 <span lang='en-GB'>Newsletters</span> 的生成与导出。"
+        "html": "我是开发学院 <span lang='en-GB'>Dashboard</span> 功能的团队成员，负责课程管理、考试、档案管理以及可定制 <span lang='en-GB'>Newsletters</span> 的生成与导出。"
     },
     "RRPP": {
         "text": "公共关系协调员"
