generate renderCV files

--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -1,6 +1,6 @@
 {
     "noscriptWarn": {
-        "html": "<h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>Aquest web es 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>, però he adaptat tot el contingut perquè puguis veure'l</p>"
+        "html": "<h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>Aquest web es 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>, però he adaptat tot el contingut perquè puguis veure’l</p>"
     },
     "darkBtn": {
         "aria-label": "Alternar mode fosc"
@@ -9,7 +9,7 @@
         "alt": "Retrat"
     },
     "biography": {
-        "html": "M'apassiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang='en-GB'>Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé."
+        "html": "M’apassiona el codi net i funcional. Em formo a diari, tant en acadèmies com per lliure, perquè el coneixement no s’acaba quan sona el timbre. M’agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang='en-GB'>Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé."
     },
     "languages": {
         "text": "Idiomes"
@@ -48,19 +48,19 @@
         "html": "Desenvolupador web <span lang='en-GB'>Backend</span>"
     },
     "backContent": {
-        "html": "Vaig formar part de l'equip que va desenvolupar el <span lang='en-GB'>Dashboard</span> de l'acadèmia per a la gestió de cursos, exàmens i expedients, així com la generació i exportació de <span lang='en-GB'>Newsletters</span> personalizables."
+        "html": "Vaig formar part de l’equip que va desenvolupar el <span lang='en-GB'>Dashboard</span> de l’acadèmia per a la gestió de cursos, exàmens i expedients, així com la generació i exportació de <span lang='en-GB'>Newsletters</span> personalizables."
     },
     "RRPP": {
         "text": "Coordinador de Relacions Públiques"
     },
     "teamCoord": {
-        "html": "Com a encarregat de Relacions Públiques, vaig gestionar el <span lang='en-GB'>Marketing</span> dels esdeveniments organitzats per l'empresa, així com la venda de <span lang='en-GB'>Merchandising</span>, a través de xarxes socials juntament amb l'equip que coordinava. Junts, vam crear una marca d'oci nocturn que va estar de moda durant anys."
+        "html": "Com a encarregat de Relacions Públiques, vaig gestionar el <span lang='en-GB'>Marketing</span> dels esdeveniments organitzats per l’empresa, així com la venda de <span lang='en-GB'>Merchandising</span>, a través de xarxes socials juntament amb l’equip que coordinava. Junts, vam crear una marca d’oci nocturn que va estar de moda durant anys."
     },
     "volunteer": {
         "text": "Classificació i empaquetament. Voluntari"
     },
     "sorting": {
-        "text": "Tot i que va ser una feina sense especialització ni grans responsabilitats, reconec que vaig gaudir d'ajudar els altres. Sempre m'han motivat els meus sentiments de justícia, i mai dubto a socórrer qui realment ho necessita."
+        "text": "Tot i que va ser una feina sense especialització ni grans responsabilitats, reconec que vaig gaudir d’ajudar els altres. Sempre m’han motivat els meus sentiments de justícia, i mai dubto a socórrer qui realment ho necessita."
     },
     "studies": {
         "text": "Estudis"
@@ -81,7 +81,7 @@
         "text": "Ciberseguretat per a usuaris"
     },
     "appDev": {
-        "text": "Desenvolupament d'aplicacions amb tecnologies web"
+        "text": "Desenvolupament d’aplicacions amb tecnologies web"
     },
     "network": {
         "text": "Arquitectura de xarxes"
@@ -120,7 +120,7 @@
         "text": "Accès a la universitat"
     },
     "ESO": {
-        "html": "Certificat d'<abbr lang='es-ES' title='Educación Secundaria Obligatoria'>ESO</abbr>"
+        "html": "Certificat d’<abbr lang='es-ES' title='Educación Secundaria Obligatoria'>ESO</abbr>"
     },
     "seeCertificate": {
         "aria-label": "Veure certificat"
@@ -150,7 +150,7 @@
         }
     },
     "estopa": {
-        "alt": "Pàgina de fans d'Estopa. Inacabat"
+        "alt": "Pàgina de fans d’Estopa. Inacabat"
     },
     "cookies": {
         "html": "respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id='accept-cookies' class='icons-snippet active' aria-label='Seguir navegant'>Acceptar</button> <button id='reject-cookies' aria-label='No m’importen les cookies' type='button'>Rebutjar</button> | <a id='info-cookies' href='https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)' target='_blank' rel='noopener noreferrer' aria-label='Més informació'>Què és una <span lang='en-GB'>cookie</span>?"
