--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -153,7 +153,7 @@
         "alt": "Pàgina de fans d’Estopa. Inacabat"
     },
     "cookies": {
-        "html": "respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id='all-cookies' class='icons-snippet active' aria-label='Cookies analítiques' type='button'>Acceptar tot</button> <button id='essential-cookies' class='icons-snippet' aria-label='Preferències d’usuari' type='button'>Només essencials</button> <button id='reject-cookies' aria-label='No m’importen les cookies!' type='button'>Rebutjar</button> | <a id='info-cookies' href='https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)' target='_blank' rel='noopener noreferrer' aria-label='Més informació'>Què és una <span lang='en-GB'>cookie</span>?</a>"
+        "html": "respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id='all-cookies' class='icons-snippet active' aria-label='Cookies analítiques' type='button'>Acceptar tot</button> <button id='essential-cookies' class='icons-snippet active' aria-label='Preferències d’usuari' type='button'>Només essencials</button> <button id='reject-cookies' aria-label='No m’importen les cookies!' type='button'>Rebutjar</button> | <a id='info-cookies' href='https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)' target='_blank' rel='noopener noreferrer' aria-label='Més informació'>Què és una <span lang='en-GB'>cookie</span>?</a>"
     },
     "modalIframe": {
         "aria-label": "Certificat oficial"
