--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -153,7 +153,7 @@
         "alt": "Página de fans de Estopa. Inacabado"
     },
     "cookies": {
-        "html": "respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id='all-cookies' class='icons-snippet active' aria-label='Cookies analíticas' type='button'>Aceptar todo</button> <button id='essential-cookies' class='icons-snippet' aria-label='Preferencias de usuario' type='button'>Solo esenciales</button> <button id='reject-cookies' aria-label='¡No me importan las cookies!' type='button'>Rechazar</button> | <a id='info-cookies' href='https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)' target='_blank' rel='noopener noreferrer' aria-label='Más información'>¿Qué es una <span lang='en-GB'>cookie</span>?</a>"
+        "html": "respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id='all-cookies' class='icons-snippet active' aria-label='Cookies analíticas' type='button'>Aceptar todo</button> <button id='essential-cookies' class='icons-snippet active' aria-label='Preferencias de usuario' type='button'>Solo esenciales</button> <button id='reject-cookies' aria-label='¡No me importan las cookies!' type='button'>Rechazar</button> | <a id='info-cookies' href='https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)' target='_blank' rel='noopener noreferrer' aria-label='Más información'>¿Qué es una <span lang='en-GB'>cookie</span>?</a>"
     },
     "modalIframe": {
         "aria-label": "Certificado oficial"
