finish cookies logic

--- a/js/i18n/ar-SA.json
+++ b/js/i18n/ar-SA.json
@@ -153,7 +153,7 @@
         "alt": "صفحة معجبين Estopa. غير مكتملة"
     },
     "cookies": {
-        "html": "يحترم خصوصيتك. <em>نحن لا نتعقب</em>، فقط نقيس الزيارات المجهولة — (إذا وافقت). <button id='all-cookies' class='icons-snippet active' aria-label='ملفات تعريف الارتباط التحليلية' type='button'>قبول الكل</button> <button id='essential-cookies' class='icons-snippet active' aria-label='تفضيلات المستخدم' type='button'>الأساسية فقط</button> <button id='reject-cookies' aria-label='لا أهتم بملفات تعريف الارتباط!' type='button'>رفض</button> | <a id='info-cookies' href='https://ar.wikipedia.org/wiki/%D9%85%D9%84%D9%81_%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D8%A7%D8%B1%D8%AA%D8%A8%D8%A7%D8%B7' target='_blank' rel='noopener noreferrer' aria-label='مزيد من المعلومات'>ما هي <span lang='en-GB'>cookie</span>؟</a>"
+        "html": "يحترم خصوصيتك. <em>نحن لا نتعقب</em>، فقط نقيس الزيارات المجهولة — (إذا وافقت). <button id='all-cookies' class='icons-snippet active' aria-label='ملفات تعريف الارتباط التحليلية' type='button'>قبول الكل</button> <button id='essential-cookies' aria-label='تفضيلات المستخدم' type='button'>الأساسية فقط</button> <button id='reject-cookies' aria-label='لا أهتم بملفات تعريف الارتباط!' type='button'>رفض</button> | <a id='info-cookies' href='https://ar.wikipedia.org/wiki/%D9%85%D9%84%D9%81_%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D8%A7%D8%B1%D8%AA%D8%A8%D8%A7%D8%B7' target='_blank' rel='noopener noreferrer' aria-label='مزيد من المعلومات'>ما هي <span lang='en-GB'>cookie</span>؟</a>"
     },
     "modalIframe": {
         "aria-label": "شهادة رسمية"
